Colocando nome de usuário com opção de logout.
